--- a/css/contact.css
+++ b/css/contact.css
@@ -125,7 +125,7 @@ p {
 
 #submit{
     width: 10em;
-    background-color: teal;
+    background-color: darkgrey;
     color: white;
     margin-bottom: 3em;
 }
